.repo_studios_legacy/repo_reports/health_suite/logs/2025-10-15_0559/scan_monkey_patches.err.log
[INFO] Scanning repo: /home/founder/jarvis2
[INFO] Output directory: /home/founder/jarvis2/.repo_studios/monkey_patch/2025-10-15_0600
[INFO] Project packages: agents, api, client_helpers, external, jarvis2, ledger, libraries, metrics_storage, mrp, scripts, src, tests, tmp
[DEBUG] Failed to parse /home/founder/jarvis2/agents/core/monitoring/metrics_storage/tests/test_memory_persistence.py
[ERROR] Parse error in /home/founder/jarvis2/agents/core/monitoring/metrics_storage/tests/test_memory_persistence.py
Traceback (most recent call last):
  File "/home/founder/jarvis2/.repo_studios/scan_monkey_patches.py", line 1016, in main
    fds = scan_file(repo_root, file, project_pkgs, context_lines, strict=args.strict)
  File "/home/founder/jarvis2/.repo_studios/scan_monkey_patches.py", line 691, in scan_file
    tree = ast.parse("\n".join(text_lines))
  File "/home/founder/miniconda3/lib/python3.13/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "<unknown>", line 74
    ```}The code executed with the following errors (first 5 lines shown, see JSON for more data):Traceback (most recent call last):  File `/tmp/tmpvxivfeck.py`, line 4, in <module>    from agents.core.monitoring.metrics_storage.storage.persistence import (ModuleNotFoundError: No module named 'agents.core.monitoring.metrics_storage.storage.persistence'}}
       ^
SyntaxError: unmatched '}'
[INFO] Done. Findings: 190
[ERROR] Strict mode: 1 file(s) failed to parse.
